🧹 Clean up development artifacts and improve gitignore
- Remove old Playwright screenshots (1.1MB freed)
- Delete duplicate Claude settings file
- Add development artifacts to gitignore
- Prevent future accumulation of browser automation files

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ info/design-tokens.json
 scripts/build-tokens
 src/_data/avatar
 src/_data/tokens
+
+# Development artifacts
+.playwright-mcp/*.png
+.playwright-mcp/*.jpg
+.playwright-mcp/*.jpeg
