--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf _site",
     "tokens:build": "node scripts/build-tokens.js",
-    "build:css": "TAILWIND_CONTENT=\"src/**/*.{njk,html,md,js}\" npx postcss ./src/assets/css/main.css -o ./_site/tailwind.css",
+    "build:css": "TAILWIND_CONTENT=\"src/**/*.{njk,html,md,js}\" ./node_modules/.bin/postcss ./src/assets/css/main.css -o ./_site/tailwind.css",
     "build:js": "NODE_ENV=production vite build",
     "build:js:dev": "NODE_ENV=development vite build",
     "build": "npm run clean && npm run tokens:build && npm run build:css && npm run build:js && eleventy",
