--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   "author": "Café com Vendas",
   "license": "ISC",
   "dependencies": {
+    "@11ty/eleventy": "^2.0.1",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "stripe": "^16.12.0"
-  },
-  "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@fontsource/lora": "^5.2.6",
+    "stripe": "^16.12.0",
     "tailwindcss": "^4.1.11",
     "vite": "^7.1.2"
+  },
+  "devDependencies": {
+    "@fontsource/lora": "^5.2.6"
   }
 }
