Establish modern dependency management and documentation system
- Update all dependencies to latest stable versions:
  * Eleventy 3.0.0 → 3.1.2
  * Tailwind/PostCSS 4.1.11 → 4.1.12
  * Stripe 16.12.0 → 18.4.0
  * All other packages to latest stable

- Create comprehensive TECH-STACK.md with:
  * Current versions and official documentation links
  * Breaking changes and migration guides
  * Troubleshooting and update procedures

- Add version management scripts:
  * npm run versions - Generate current version manifest
  * npm run outdated - Check for updates

- Update CLAUDE.md with:
  * Current tech stack versions and links
  * Quick reference commands
  * Modern ESM architecture notes

This ensures we always work with latest versions and have proper documentation references.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "npm run clean && npm run tokens:build && npm run build:css && npm run build:js && eleventy",
     "start": "npm run tokens:build && TAILWIND_CONTENT=\"src/**/*.{njk,html,md,js}\" npm run build:css && npm run build:js:dev && eleventy --serve",
     "dev": "npm run tokens:build && TAILWIND_CONTENT=\"src/**/*.{njk,html,md,js}\" npm run build:css && npm run build:js:dev && eleventy --serve --watch",
-    "dev:netlify": "netlify dev"
+    "dev:netlify": "netlify dev",
+    "versions": "npm list --depth=0 > VERSIONS.txt && echo \"Generated on: $(date)\" >> VERSIONS.txt && echo \"Node.js: $(node --version)\" >> VERSIONS.txt",
+    "outdated": "npm outdated || echo 'All packages are up to date!'"
   },
   "keywords": [
     "landing-page",
@@ -32,7 +34,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "stripe": "^16.12.0",
+    "stripe": "^18.4.0",
     "tailwindcss": "^4.1.11",
     "vite": "^7.1.2"
   },
