build(deploy): ensure dev dependencies during production builds
Add npm ci --include=dev to Netlify production build command to ensure dev dependencies are available during build process. This prevents build failures when build tools require dev dependencies.

--- a/netlify.toml
+++ b/netlify.toml
@@ -107,7 +107,7 @@
 
 # Environment-specific settings
 [context.production]
-  command = "npm run build"
+  command = "npm ci --include=dev && npm run build"
   
   [context.production.environment]
     NODE_ENV = "production"
