--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "start": "npm run dev",
     "preview": "npm run build && npx serve _site",
     "dev:netlify": "netlify dev",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "versions": "npm list --depth=0",
     "outdated": "npm outdated",
     "update": "npm update"
@@ -41,9 +43,12 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
+    "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
+    "eslint": "^9.33.0",
+    "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "tailwindcss": "^4.1.11",
