docs: add comprehensive payment testing guide and configuration
Add detailed Stripe test card documentation with Portugal/Brazil
specific cards for accurate checkout testing. Include complete
environment variable setup with security best practices.

Update build commands to include new ESLint scripts.

--- a/.env.example
+++ b/.env.example
@@ -18,15 +18,32 @@ FIRECRAWL_API_KEY=fc-your_firecrawl_api_key
 # Formspree Configuration (Public - Safe to expose)
 VITE_FORMSPREE_FORM_ID=your_form_id_here
 
-# Stripe Keys (NEVER expose secret keys to client-side)
-# Publishable key prefixed with VITE_ to be available in client-side code
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_test_publishable_key_here
-# Secret key stays server-side only (no VITE_ prefix)
+# Stripe Configuration (Required for payment processing)
+# Get keys from: https://dashboard.stripe.com/apikeys
+
+# Publishable key (safe to expose in frontend)
+STRIPE_PUBLIC_KEY=pk_test_your_test_publishable_key_here
+
+# Secret key (server-side only - NEVER expose in frontend)
 STRIPE_SECRET_KEY=sk_test_your_test_secret_key_here
 
+# Webhook secret for signature verification
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
 # For production, set these in Netlify environment variables:
-# VITE_STRIPE_PUBLISHABLE_KEY=pk_live_your_live_publishable_key_here
+# STRIPE_PUBLIC_KEY=pk_live_your_live_publishable_key_here
 # STRIPE_SECRET_KEY=sk_live_your_live_secret_key_here
+# STRIPE_WEBHOOK_SECRET=whsec_your_live_webhook_secret_here
+
+# ==============================================================================
+# STRIPE TEST CARDS (Development Only)
+# ==============================================================================
+# 🇵🇹 Portugal (90% of customers): 4000 0062 0000 0007 (Requires 3D Secure)
+# 🇧🇷 Brazil (10% of customers):   4000 0007 6000 0002 (Visa Brazil)
+# 🌍 Global fallback:              4242 4242 4242 4242 (Standard success)
+# 
+# Use any future expiry date and any 3-digit CVC
+# See docs/STRIPE_TEST_CARDS.md for complete testing guide
 
 # MailerLite API Key (Server-side only)
 MAILERLITE_API_KEY=your_mailerlite_jwt_token
@@ -39,7 +56,7 @@ NETLIFY_SITE_ID=your_netlify_site_id
 NETLIFY_AUTH_TOKEN=your_netlify_auth_token
 
 # Webhook URLs (for reference)
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# Stripe webhook endpoint: https://your-site.netlify.app/.netlify/functions/stripe-webhook
 FORMSPREE_WEBHOOK_URL=https://your-site.netlify.app/.netlify/functions/formspree-webhook
 
 # Contact Information
