fix(cloudinary): resolve environment variable loading and update image references
Add dotenv package and import to properly load environment variables during
Eleventy build process. Update Cloudinary integration to use correct cloud
name (ds4dhbneq) and fix hero background image reference from cafe-hero to
cafe_pnkngz to match uploaded asset public ID.

- Install dotenv dependency for environment variable support
- Add dotenv import to .eleventy.js for build-time env var loading
- Set hardcoded cloud name in layout.njk as failsafe
- Update hero component data attribute to use correct public ID
- Fix cloudinary.js to reference proper hero image asset
- Regenerate design tokens with updated timestamp

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "license": "ISC",
   "dependencies": {
     "@fontsource/lora": "^5.2.6",
+    "dotenv": "^17.2.1",
     "stripe": "^18.4.0"
   },
   "devDependencies": {
