chore(commands): remove review-mode from commit command
Enable direct commit execution without confirmation prompts.
Removes the review-mode: "plan-then-apply" setting to streamline
the commit workflow for faster development iteration.

--- a/netlify.toml
+++ b/netlify.toml
@@ -74,7 +74,7 @@
     # Content Security Policy
     Content-Security-Policy = '''
       default-src 'self';
-      script-src 'self' 'unsafe-inline' https://js.stripe.com https://www.googletagmanager.com https://www.google-analytics.com https://plausible.io;
+      script-src 'self' https://js.stripe.com https://www.googletagmanager.com https://www.google-analytics.com https://plausible.io;
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: https: blob:;
       font-src 'self' data:;
