chore: ignore generated CSS tokens file
Add src/assets/css/_tokens.generated.css to gitignore to prevent
unnecessary commits from timestamp changes in build artifacts.

The file is automatically generated from info/DATA_design_tokens.json
during development and build processes.

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,9 @@ yarn-error.log*
 # CSS maps
 *.css.map
 
+# Generated files (build artifacts)
+src/assets/css/_tokens.generated.css
+
 # Claude settings with sensitive data
 .claude/settings.local.json
 .claude/settings.local
