--- a/netlify.toml
+++ b/netlify.toml
@@ -103,11 +103,7 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
-# Text compression for HTML files
-[[headers]]
-  for = "*.html"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
+# HTML cache headers handled by _headers file to avoid conflicts
 
 # Headers for fonts
 [[headers]]
