--- a/netlify.toml
+++ b/netlify.toml
@@ -74,8 +74,8 @@
     # Content Security Policy
     Content-Security-Policy = '''
       default-src 'self';
-      script-src 'self' https://js.stripe.com https://www.googletagmanager.com https://www.google-analytics.com https://plausible.io;
-      style-src 'self' 'unsafe-inline';
+      script-src 'self' https://js.stripe.com https://www.googletagmanager.com https://www.google-analytics.com https://plausible.io 'strict-dynamic' 'nonce-cafecomvendas';
+      style-src 'self';
       img-src 'self' data: https: blob:;
       font-src 'self' data:;
       connect-src 'self' https://api.stripe.com https://formspree.io https://connect.mailerlite.com https://www.google-analytics.com https://plausible.io;
@@ -141,10 +141,9 @@
     NODE_ENV = "development"
     ELEVENTY_ENV = "development"
 
-# Edge functions (if needed in the future)
-# [[edge_functions]]
-#   function = "checkout-analytics"
-#   path = "/checkout/*"
+[[edge_functions]]
+  function = "csp"
+  path = "/*"
 
 # Plugin configuration
 [[plugins]]
