--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
   functions = "netlify/functions"
   
   # Node.js version and secrets configuration
-  environment = { NODE_VERSION = "22.17.1", SECRETS_SCAN_OMIT_KEYS = "VITE_FORMSPREE_FORM_ID,VITE_STRIPE_PUBLIC_KEY,VITE_GTM_CONTAINER_ID" }
+  environment = { NODE_VERSION = "22.17.1", SECRETS_SCAN_OMIT_KEYS = "VITE_FORMSPREE_FORM_ID,VITE_STRIPE_PUBLIC_KEY,VITE_GTM_CONTAINER_ID", NODE_OPTIONS = "--max-old-space-size=4096" }
 
 # Build processing
 [build.processing]
