📊 analytics: migrate to GTM-only tracking with unified event system
- Remove duplicate analytics systems (GA4 direct, Plausible)
- Update CSP headers with wildcard domains for Google services
- Centralize all tracking through GTM dataLayer
- Add comprehensive GTM events reference documentation
- Fix duplicate GTM initialization between HTML and JS
- Standardize event naming convention for better tracking
- Enable immediate GTM loading for conversion optimization

GTM now serves as single source of truth for all tags and tracking.

--- a/.env.example
+++ b/.env.example
@@ -48,8 +48,8 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 # MailerLite API Key (Server-side only)
 MAILERLITE_API_KEY=your_mailerlite_jwt_token
 
-# Google Analytics (optional)
-GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# Google Tag Manager (GTM) - Controls all analytics and tracking
+VITE_GTM_CONTAINER_ID=GTM-XXXXXXXXX
 
 # Build Environment  
 NETLIFY_SITE_ID=your_netlify_site_id
