✨ feat: add MailerLite integration for comprehensive lead capture
- Create dedicated Netlify function for MailerLite lead submissions
- Implement dual submission system (Formspree + MailerLite) in checkout
- Add circuit breaker pattern and rate limiting for API resilience
- Enable status progression from 'lead' to 'paid' for complete funnel tracking
- Configure fail-safe approach: Formspree required, MailerLite enhancement
- Document MailerLite environment variables with integration notes

Benefits:
• Capture 100% of leads (not just paying customers)
• Enable abandoned cart recovery and nurture sequences
• Comprehensive error handling with graceful degradation
• Production-ready with validation, rate limiting, and monitoring

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,16 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 # Use any future expiry date and any 3-digit CVC
 # See docs/STRIPE_TEST_CARDS.md for complete testing guide
 
-# MailerLite API Key (Server-side only)
-MAILERLITE_API_KEY=your_mailerlite_jwt_token
+# MailerLite Configuration (Server-side only - NEVER expose in frontend)
+# Get API key from: https://dashboard.mailerlite.com/integrations/api
+MAILERLITE_API_KEY=your_mailerlite_jwt_token_here
+MAILERLITE_GROUP_ID=cafe-com-vendas
+
+# MailerLite Integration Notes:
+# - Captures leads from checkout form (payment_status: 'lead')
+# - Updates to 'paid' status after successful Stripe payment
+# - Enables nurture sequences and abandoned cart recovery
+# - Works alongside existing Stripe webhook integration
 
 # Google Tag Manager (GTM) - Controls all analytics and tracking
 VITE_GTM_CONTAINER_ID=GTM-XXXXXXXXX
