🔧 chore: setup TypeScript infrastructure and tooling
- Add TypeScript configuration with strict settings and modern target
- Update ESLint config with @typescript-eslint parser and rules
- Add TypeScript dependencies and type checking scripts
- Configure Vite for TypeScript compilation with proper bundling
- Enable type checking in build pipeline for production safety

This establishes the foundation for migrating the JavaScript codebase
to TypeScript while maintaining existing functionality and build process.

--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "build:css": "postcss ./src/assets/css/main.css -o ./_site/tailwind.css",
     "build:js": "cross-env NODE_ENV=production vite build",
     "build:js:dev": "cross-env NODE_ENV=development vite build",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
     "eleventy": "eleventy",
     "eleventy:serve": "eleventy --serve --watch",
     "dev": "npm run tokens:build && npm run build:css && npm run build:js:dev && npm run eleventy:serve",
-    "build": "npm run clean && npm run tokens:build && npm run build:css && npm run build:js && npm run eleventy",
+    "build": "npm run clean && npm run type-check && npm run tokens:build && npm run build:css && npm run build:js && npm run eleventy",
     "start": "npm run dev",
     "preview": "npm run build && npx serve _site",
     "dev:netlify": "netlify dev",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "eslint . --fix --ext .js,.ts",
     "lighthouse": "npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-mobile --form-factor=mobile --preset=perf --chrome-flags=\"--headless --no-sandbox\" && npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-desktop --form-factor=desktop --preset=desktop --chrome-flags=\"--headless --no-sandbox\"",
     "lighthouse:mobile": "npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-mobile --form-factor=mobile --preset=perf --chrome-flags=\"--headless --no-sandbox\"",
     "lighthouse:desktop": "npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-desktop --form-factor=desktop --preset=desktop --chrome-flags=\"--headless --no-sandbox\"",
@@ -50,6 +52,9 @@
     "@11ty/eleventy": "^3.0.0",
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
@@ -58,6 +63,7 @@
     "postcss-cli": "^11.0.1",
     "tailwindcss": "^4.1.11",
     "terser": "^5.43.1",
+    "typescript": "^5.9.2",
     "vite": "^7.1.2",
     "vite-plugin-compression": "^0.5.1"
   }
