--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "outdated": "npm outdated",
     "update": "npm update",
     "verify-apis": "tsx scripts/verify-apis.ts",
-    "test-apis": "tsx scripts/test-apis.ts",
     "screenshot": "tsx scripts/screenshot-cli.ts",
     "screenshot:local": "npm run screenshot -- --url=http://localhost:8080",
     "find:section": "tsx scripts/find-section.ts",
@@ -50,7 +49,8 @@
     "test:visual": "playwright test",
     "test:visual:ui": "playwright test --ui",
     "test:visual:headed": "playwright test --headed",
-    "test:all": "npm run test:run && npm run test:visual"
+    "test:all": "npm run test:run && npm run test:visual",
+    "validate:content": "tsx scripts/validate-content.ts"
   },
   "keywords": [
     "landing-page",
