--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:css": "postcss ./src/assets/css/main.css -o ./_site/tailwind.css",
     "build:js": "NODE_ENV=production vite build",
     "build:js:dev": "NODE_ENV=development vite build",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc -p tsconfig.typecheck.json --pretty false",
     "type-check:watch": "tsc --noEmit --watch",
     "eleventy": "eleventy --config=.eleventy.ts",
     "eleventy:serve": "eleventy --serve --watch --config=.eleventy.ts",
@@ -25,6 +25,8 @@
     "dev:netlify": "netlify dev",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --fix --ext .ts",
+    "lint:typed": "eslint \"src/**/*.{ts,tsx}\" --cache --cache-location node_modules/.cache/eslint",
+    "lint:staged": "node .claude/scripts/eslint-staged.mjs",
     "lighthouse": "npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-mobile --form-factor=mobile --preset=perf --chrome-flags=\"--headless --no-sandbox\" && npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-desktop --form-factor=desktop --preset=desktop --chrome-flags=\"--headless --no-sandbox\"",
     "lighthouse:mobile": "npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-mobile --form-factor=mobile --preset=perf --chrome-flags=\"--headless --no-sandbox\"",
     "lighthouse:desktop": "npx lighthouse http://localhost:8080 --output=html,json --output-path=./reports/lighthouse-desktop --form-factor=desktop --preset=desktop --chrome-flags=\"--headless --no-sandbox\"",
