♻️ refactor: organize generated CSS tokens into dedicated directory
• Move tokens.generated.css to generated/tokens.css for better organization
• Update build script and CSS imports to use new path structure
• Remove deprecated .eslintignore file replaced by flat config
• Update .gitignore to track new generated file location

--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ yarn-error.log*
 *.css.map
 
 # Generated files (build artifacts)
-src/assets/css/_tokens.generated.css
+src/assets/css/generated/tokens.css
 
 # Claude settings with sensitive data
 .claude/settings.local.json
