--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
       "@content/*": ["content/*"],
       "@sections/*": ["src/_includes/sections/*"],
       "@assets/*": ["src/assets/*"],
+      "@types/*": ["src/types/*"],
       "@/*": ["src/assets/js/*"]
     },
 
