♻️ refactor: consolidate component structure and remove duplicates
- Remove deprecated src/assets/js/components/ directory (8 files)
- Update 14+ import paths to use consolidated component structure
- Add @components/* path alias to TypeScript and Vite configs
- Fix phantom @platform/ references in documentation
- Remove unused footer-legacy type definitions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "paths": {
       "@content/*": ["content/*"],
       "@sections/*": ["src/_includes/sections/*"],
+      "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"],
       "@types/*": ["src/types/*"],
       "@/*": ["src/assets/js/*"]
