♻️ refactor: consolidate data architecture and align with Netlify Dev workflow
• Unified sections.ts loader with dynamic page detection
• Replaced duplicate thankYou.ts with single source sections system
• Moved static assets from src/public to root public/ for Vite alignment
• Updated dev script to use netlify dev for simplified local development
• Added legal page configurations (privacy, terms, refund guarantee)
• Removed redundant section arrays from page metadata

Breaking: pages.ts no longer includes sections array (handled by sections.ts)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
-    "dev": "concurrently \"vite dev --port 5173\" \"eleventy --serve --watch --incremental --config=.eleventy.ts\" \"netlify functions:serve --port 3000\" --kill-others-on-fail --names=\"assets,11ty,backend\"",
+    "dev": "netlify dev",
     "build": "rm -rf _site && NODE_ENV=production vite build && eleventy --config=.eleventy.ts",
     "preview": "npm run build && npx serve _site",
     "lint": "eslint . --ext .ts",
