🔧 chore: remove concurrently and complete Netlify Dev migration
• Remove unused concurrently dependency (simplified with netlify dev)
• Update netlify.toml dev command to use Eleventy directly
• Clean package-lock.json of related dependencies

--- a/netlify.toml
+++ b/netlify.toml
@@ -32,17 +32,11 @@
 [build.processing.images]
   compress = true
 
-# Development settings (for legacy unified dev server)
+# Development settings - Use Eleventy as primary dev server
 [dev]
-  command = "npm run dev:netlify:build"
-  port = 8889
+  command = "eleventy --serve --watch --incremental --config=.eleventy.ts"
   publish = "_site"
   functions = "netlify/functions"
-
-# Note: For separated development, use:
-# Frontend: npm run dev:frontend (http://localhost:8888)
-# Backend:  npm run dev:backend  (http://localhost:3000)
-# Both:     npm run dev
 
 # Function-specific settings
 [functions]
