--- a/netlify.toml
+++ b/netlify.toml
@@ -35,6 +35,7 @@
 # Development settings - Use Eleventy as primary dev server
 [dev]
   command = "eleventy --serve --watch --incremental --config=.eleventy.ts"
+  targetPort = 8080
   publish = "_site"
   functions = "netlify/functions"
 
