🔧 fix: resolve Edge Function Deno cache errors with import maps
• Move import map to official Netlify location (.netlify/v1/edge-functions/)
• Add deno.json configuration for local development environment
• Update netlify.toml with proper deno_import_map reference
• Fix TypeScript types in CSP Edge Function
• Enhance .gitignore with additional Netlify build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,13 @@ temp/
 # Netlify development files
 .netlify/
 
+# Netlify build artifacts
+netlify-automatic-functions/
+.netlify-auto-functions.json
+
+# Local Netlify CLI cache
+.netlify-cache/
+
 # Optional npm cache
 .npm
 
