--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "node": ">=22.17.1",
     "npm": ">=10.0.0"
   },
+  "engineStrict": true,
   "scripts": {
     "dev": "netlify dev",
     "build": "rm -rf _site && NODE_ENV=production vite build && eleventy --config=.eleventy.ts",
     "preview": "npm run build && npx serve _site",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint .",
     "type-check": "tsc -p tsconfig.typecheck.json --pretty false",
     "test": "vitest run",
     "verify-apis": "tsx scripts/verify-apis.ts"
@@ -34,17 +35,17 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "@eslint/js": "^9.33.0",
+    "@eslint/js": "^9.34.0",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
     "tailwindcss": "^4.1.12",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vitest": "^3.2.4"
